force-app/main/default/objects/Contact/fields/accessToken__c.field-meta.xml
<CustomField>
    <fullName>accessToken__c</fullName>
    <label>accessToken</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>