force-app/main/default/objects/Contact/fields/Date_Selected__c.field-meta.xml
<CustomField>
    <fullName>Date_Selected__c</fullName>
    <label>Date Selected</label>
    <type>Date</type>
</CustomField>