force-app/main/default/objects/Contact/fields/Money_Owed__c.field-meta.xml
<CustomField>
    <fullName>Money_Owed__c</fullName>
    <label>Money Owed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>