force-app/main/default/objects/Contact/fields/SalesforceId__c.field-meta.xml
<CustomField>
    <fullName>SalesforceId__c</fullName>
    <label>SalesforceId</label>
    <length>7</length>
    <type>Text</type>
</CustomField>